# coco-sensor

./: CMakeLists.txt  README.md  conanfile.py
coco/: BME680.cpp  BME680.hpp  CMakeLists.txt  Sensor.cpp  Sensor.hpp
coco/emu/coco/platform/: Sensor_emu.cpp  Sensor_emu.hpp
coco/native/coco/platform/: Sensor_native.cpp  Sensor_native.hpp
test/: BME680DisplayTest.cpp  BME680Test.cpp  CMakeLists.txt
test/emu/: BME680DisplayTest.hpp
test/native/: BME680Test.hpp
test/stm32g431nucleo/: BME680DisplayTest.hpp
